welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
posNeg:6: error: ';' expected but 'if' found.
    return true if (a<0 && b<0)
                ^